practice/zivasera/customer/deployment-customer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-customer
  namespace: dev
  labels:
    app: app-customer
    name: app-customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-customer
  template:
    metadata:
      labels:
        app: app-customer
    spec:
      containers:
        - name: app-customer
          image: cpsarathe/demo-ecom-repo:customer
          ports:
            - containerPort: 9080
              name: mysql-customer
          volumeMounts:
            - mountPath: /logs/customer
              subPath: customer
              name: customer-logs
      volumes:
        - name: customer-logs
          persistentVolumeClaim:
            claimName: pvc-logs-customer-app
