practice/zivasera/customer/service-customer-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-customer
  namespace: dev
spec:
    type: ClusterIP
    #type: NodePort
    ports:
      - port: 12180
        targetPort: 9080
        # nodePort: 30190
        name: http
    selector:
      #labels of metadata.labels in matching pods
      app: app-customer
