practice/zivasera/customer/service-mysql-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mysql-customer
  namespace: dev
spec:
  type: ClusterIP
  selector:
    name: mysql-customer
  ports:
      #node port
    - port: 3306
      #container pot
      targetPort: 3306
