practice/zivasera/customer/ingress-customer-router.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-customer-router
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /customer
    nginx.ingress.kubernets.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /customer/*
            backend:
              serviceName: service-app-customer
              servicePort: http
